slider widget and api
