# backend/models/user.model.js
@@ -1,0 +1,43 @@
+const mongoose = require('mongoose');
+const { Schema } = mongoose;
+
+const UserSchema = new Schema(
+  {
+    fullName: {
+      type: String,
+      required: true,
+    },
+    email: {
+      type: String,
+      required: true,
+      unique: true,
+    },
+    password: {
+      type: String,
+      required: true,
+    },
+  },
+  {
+    timestamps: true, // Fixed spelling
+    toJSON: {
+      transform: function (doc, ret) {
+        ret.userId = ret._id.toString();
+        delete ret._id;
+        delete ret.__v;
+        delete ret.password;
+      },
+    },
+    toObject: {
+      transform: function (doc, ret) {
+        ret.userId = ret._id.toString();
+        delete ret._id;
+        delete ret.__v;
+        delete ret.password;
+      },
+    },
+  }
+);
+
+const User = mongoose.model("User", UserSchema);
+
+module.exports = User; // Correctly exporting the User model
